# excel-agent-fintech

./: .gitignore  AUDIT_REPORT.md  DEPLOYMENT.md  README.md  main.py  pyproject.toml  requirements.txt
src/: analyzer.py  app.py  extractor.py  filter.py  models.py  parser.py  reporter.py
src/excel_financial_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ingest/: base.py  factory.py  pdf.py  xml.py
src/ml/: forecaster.py
tests/: test_currency_conversion.py  test_dcf_valuation.py  test_extractor_filtering.py  test_models.py  test_oop_refactor.py  test_parse.py  test_report.xlsx  test_v2.py  test_validation_fix.py  test_valuation_bridge.py  test_xhtml_ingestion.py
